# TripleTriad

./: .gitignore  README.md  run.sh
app/: CMakeLists.txt
app/inc/: test.h  tt.h  tt_sim.h
app/src/: main.c  test.c  tt.c  tt_sim.c
gui/: go.mod  main.go  main.py  sim_data.json  triple_triad.py  triple_triad_core.py
scripts/: image_scraper.py  sim_data.json
